[package]
name = "teltonika"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deku = "0.16.0"
hex_lit = "0.1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.44"
tokio = { version = "1", features = ["full"] }
rumqttc = "0.22.0"
strum = "0.25"
strum_macros = "0.25"
